RESOLVED FIXED273225
[WebGPU] Fix unguarded WTF::String in WebGPU.h
https://bugs.webkit.org/show_bug.cgi?id=273225
Summary [WebGPU] Fix unguarded WTF::String in WebGPU.h
Mike Wyrzykowski
Reported 2024-04-24 20:41:16 PDT
[WebGPU] Fix unguarded WTF::String in WebGPU.h
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-24 20:41:29 PDT
Mike Wyrzykowski
Comment 2 2024-04-24 20:44:24 PDT
EWS
Comment 3 2024-04-24 23:13:24 PDT
Committed 277966@main (24c8e1add6a1): <https://commits.webkit.org/277966@main> Reviewed commits have been landed. Closing PR #27725 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.