Cherry-pick 24c8e1add6a1. rdar://127026122

[WebGPU] Fix unguarded WTF::String in WebGPU.h
    https://bugs.webkit.org/show_bug.cgi?id=273225
    <rdar://problem/127028179>

    Unreviewed build fix for some targets.

    Import is guarded by cplus_plus but String was being
    used unconditionally.

    * Source/WebGPU/WebGPU/WebGPU.h:

    Canonical link: https://commits.webkit.org/277966@main

Canonical link: https://commits.webkit.org/277790.17@safari-7619.1.10-branch